--- a/admin.html
+++ b/admin.html
@@ -5,72 +5,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        tailwind.config = { darkMode: 'class' }
+        if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        } else {
+            document.documentElement.classList.remove('dark')
+        }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <title>Admin Dashboard | FoodiePro</title>
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; }
-        .glass { background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(10px); }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; transition: background-color 0.3s ease; overflow-x: hidden; }
+        .nav-link.active { background: #f97316; color: white; box-shadow: 0 10px 15px -3px rgba(249, 115, 22, 0.3); }
+        .view-section { display: none; animation: fadeIn 0.4s ease-out; }
+        .view-section.active { display: block; }
+        .filter-btn.active { background-color: #f97316; color: white; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
-<body class="bg-gray-50 flex min-h-screen">
+<body class="bg-[#F8FAFC] dark:bg-slate-950 flex min-h-screen transition-colors duration-300">
 
-    <aside class="w-64 bg-slate-900 text-white p-6 hidden md:flex flex-col fixed h-full">
+    <aside class="w-64 bg-slate-900 text-white p-6 hidden md:flex flex-col fixed h-full border-r border-slate-800 z-50">
         <h1 class="text-2xl font-black text-orange-500 mb-10 tracking-tighter">ADMIN<span class="text-white">PRO</span></h1>
-        <nav class="space-y-4 flex-1">
-            <a href="#" class="block p-3 bg-orange-500 rounded-xl font-bold transition">📊 Dashboard</a>
-            <a href="#orders-section" class="block p-3 hover:bg-slate-800 rounded-xl transition">🛍️ Orders</a>
-            <a href="#products-section" class="block p-3 hover:bg-slate-800 rounded-xl transition">🍔 Menu Items</a>
+        <nav class="space-y-3 flex-1">
+            <button onclick="showSection('dashboard')" class="nav-link active w-full text-left p-4 rounded-2xl font-bold transition flex items-center gap-3">📊 Dashboard</button>
+            <button onclick="showSection('orders')" class="nav-link w-full text-left p-4 hover:bg-slate-800 rounded-2xl transition text-slate-400 font-semibold flex items-center gap-3">🛍️ Orders</button>
+            <button onclick="showSection('products')" class="nav-link w-full text-left p-4 hover:bg-slate-800 rounded-2xl transition text-slate-400 font-semibold flex items-center gap-3">🍔 Menu</button>
+            <button onclick="showSection('profile')" class="nav-link w-full text-left p-4 hover:bg-slate-800 rounded-2xl transition text-slate-400 font-semibold flex items-center gap-3">⚙️ Profile</button>
+            
+            <button id="theme-toggle" class="w-full flex items-center justify-between p-4 hover:bg-slate-800 rounded-2xl transition text-slate-400 mt-10 border border-slate-800">
+                <span>Theme</span> <span id="theme-icon">🌙</span>
+            </button>
         </nav>
-        <button id="logout-btn" class="p-3 bg-slate-800 hover:bg-red-600 rounded-xl transition font-bold">Logout</button>
+        <button id="logout-btn" class="p-4 bg-red-500/10 text-red-500 hover:bg-red-500 hover:text-white rounded-2xl transition font-bold border border-red-500/20">Logout</button>
     </aside>
 
     <main class="flex-1 md:ml-64 p-6 md:p-10">
         
-        <header class="flex justify-between items-center mb-10">
-            <h2 class="text-3xl font-extrabold text-gray-800">Analytics Overview</h2>
-            <div class="text-sm font-medium text-gray-500 bg-white px-4 py-2 rounded-lg shadow-sm">Welcome back, Admin! 👋</div>
-        </header>
-
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
-            <div class="bg-white p-6 rounded-[2rem] shadow-sm border-b-4 border-orange-500">
-                <p class="text-gray-400 font-bold uppercase text-xs tracking-widest">Total Revenue</p>
-                <h3 id="total-sales" class="text-3xl font-black mt-2">Rs. 0</h3>
+        <div id="section-dashboard" class="view-section active">
+            <h2 class="text-3xl font-extrabold text-gray-800 dark:text-white mb-10">Dashboard Overview</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10 text-center">
+                <div class="bg-white dark:bg-slate-900 p-8 rounded-[2.5rem] shadow-sm border-b-4 border-orange-500">
+                    <p class="text-gray-400 font-bold uppercase text-xs">Total Sales</p>
+                    <h3 id="total-sales" class="text-3xl font-black mt-2 dark:text-white">Rs. 0</h3>
+                </div>
+                <div class="bg-white dark:bg-slate-900 p-8 rounded-[2.5rem] shadow-sm border-b-4 border-blue-500">
+                    <p class="text-gray-400 font-bold uppercase text-xs">Orders</p>
+                    <h3 id="total-orders" class="text-3xl font-black mt-2 dark:text-white">0</h3>
+                </div>
+                <div class="bg-white dark:bg-slate-900 p-8 rounded-[2.5rem] shadow-sm border-b-4 border-green-500">
+                    <p class="text-gray-400 font-bold uppercase text-xs">Dishes</p>
+                    <h3 id="total-prods" class="text-3xl font-black mt-2 dark:text-white">0</h3>
+                </div>
             </div>
-            <div class="bg-white p-6 rounded-[2rem] shadow-sm border-b-4 border-blue-500">
-                <p class="text-gray-400 font-bold uppercase text-xs tracking-widest">Active Orders</p>
-                <h3 id="total-orders" class="text-3xl font-black mt-2">0</h3>
-            </div>
-            <div class="bg-white p-6 rounded-[2rem] shadow-sm border-b-4 border-green-500">
-                <p class="text-gray-400 font-bold uppercase text-xs tracking-widest">Live Products</p>
-                <h3 id="total-prods" class="text-3xl font-black mt-2">0</h3>
+            <div class="bg-white dark:bg-slate-900 p-8 rounded-[2.5rem] shadow-sm border dark:border-slate-800 h-[400px]">
+                <canvas id="salesChart"></canvas>
             </div>
         </div>
 
-        <div class="bg-white p-8 rounded-[2.5rem] shadow-sm mb-10">
-            <h3 class="font-bold text-gray-700 mb-6">Sales Performance</h3>
-            <canvas id="salesChart" height="100"></canvas>
+        <div id="section-orders" class="view-section">
+            <div class="flex flex-col md:flex-row justify-between items-center mb-8 gap-4">
+                <h3 class="text-3xl font-extrabold dark:text-white">Live Orders</h3>
+                <div class="flex gap-2 bg-white dark:bg-slate-900 p-2 rounded-2xl border dark:border-slate-800">
+                    <button onclick="filterOrders('All')" class="filter-btn active px-4 py-2 rounded-xl text-xs font-bold transition">All</button>
+                    <button onclick="filterOrders('Pending')" class="filter-btn px-4 py-2 rounded-xl text-xs font-bold transition">Pending</button>
+                    <button onclick="filterOrders('Serving')" class="filter-btn px-4 py-2 rounded-xl text-xs font-bold transition">Serving</button>
+                    <button onclick="filterOrders('Delivered')" class="filter-btn px-4 py-2 rounded-xl text-xs font-bold transition">Delivered</button>
+                </div>
+            </div>
+            <div id="admin-order-list" class="space-y-4"></div>
         </div>
 
-        <section id="products-section" class="bg-white p-8 rounded-[2.5rem] shadow-sm mb-10 border border-gray-100">
-            <h3 class="text-2xl font-bold mb-6">Add New Dish</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                <input type="text" id="prod-name" placeholder="Dish Name" class="p-4 bg-gray-50 border-none rounded-2xl outline-none focus:ring-2 focus:ring-orange-500 transition">
-                <input type="number" id="prod-price" placeholder="Price (Rs.)" class="p-4 bg-gray-50 border-none rounded-2xl outline-none focus:ring-2 focus:ring-orange-500 transition">
-                <input type="text" id="prod-cat" placeholder="Category" class="p-4 bg-gray-50 border-none rounded-2xl outline-none focus:ring-2 focus:ring-orange-500 transition">
-                <input type="text" id="prod-img-url" placeholder="Paste Image URL" class="p-4 bg-gray-50 border-none rounded-2xl outline-none focus:ring-2 focus:ring-orange-500 transition">
+        <div id="section-products" class="view-section">
+            <div class="flex justify-between items-center mb-8">
+                <h3 class="text-3xl font-extrabold dark:text-white">Menu Management</h3>
+                <button onclick="openAddModal()" class="bg-orange-500 text-white px-6 py-3 rounded-2xl font-bold shadow-lg hover:scale-105 transition">+ Add Dish</button>
             </div>
-            <button id="save-prod-btn" class="mt-6 bg-gray-900 text-white px-10 py-4 rounded-2xl font-bold hover:bg-orange-500 transition-all shadow-xl shadow-orange-100">
-                🚀 Publish Product
-            </button>
-        </section>
+            <div id="admin-product-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+        </div>
 
-        <section id="orders-section">
-            <h3 class="text-2xl font-bold mb-6">Recent Orders</h3>
-            <div id="admin-order-list" class="space-y-4">
-                <p class="text-gray-400 italic">Fetching live orders...</p>
+        <div id="section-profile" class="view-section">
+            <h3 class="text-3xl font-extrabold mb-8 dark:text-white">Store Settings</h3>
+            <div class="bg-white dark:bg-slate-900 p-10 rounded-[3rem] border dark:border-slate-800 max-w-2xl shadow-xl">
+                <div class="space-y-5">
+                    <div class="flex flex-col items-center mb-6">
+                        <img id="profile-preview" src="https://via.placeholder.com/150" class="w-32 h-32 rounded-full object-cover border-4 border-orange-500 mb-4">
+                        <h4 id="display-store-name" class="text-xl font-black dark:text-white uppercase tracking-widest">My Store</h4>
+                    </div>
+                    <input type="text" id="store-name" placeholder="Store Name" class="w-full p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none border-2 border-transparent focus:border-orange-500">
+                    <input type="text" id="store-location" placeholder="Address" class="w-full p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none border-2 border-transparent focus:border-orange-500">
+                    <button onclick="saveVendorProfile()" class="w-full bg-slate-900 dark:bg-orange-500 text-white p-5 rounded-2xl font-black shadow-xl">Save Profile</button>
+                </div>
             </div>
-        </section>
+        </div>
     </main>
+
+    <div id="add-product-modal" class="hidden fixed inset-0 z-[100] flex items-center justify-center p-4 bg-slate-950/80 backdrop-blur-md">
+        <div class="bg-white dark:bg-slate-900 w-full max-w-xl rounded-[3rem] p-10 shadow-2xl relative">
+            <button onclick="closeAddModal()" class="absolute top-6 right-6 text-gray-400 text-3xl">&times;</button>
+            <h3 class="text-3xl font-black dark:text-white mb-8 text-center">New Dish</h3>
+            <div class="space-y-4">
+                <input type="text" id="prod-name" placeholder="Name" class="w-full p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none border-2 border-transparent focus:border-orange-500">
+                <div class="grid grid-cols-2 gap-4">
+                    <input type="number" id="prod-price" placeholder="Price" class="p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none focus:border-orange-500">
+                    <input type="text" id="prod-cat" placeholder="Category" class="p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none focus:border-orange-500">
+                </div>
+                <input type="text" id="prod-img-url" placeholder="Image URL" class="w-full p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none focus:border-orange-500">
+                <button id="save-prod-btn" class="w-full bg-orange-500 text-white p-5 rounded-2xl font-black text-lg shadow-xl">Publish</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="edit-product-modal" class="hidden fixed inset-0 z-[110] flex items-center justify-center p-4 bg-slate-950/80 backdrop-blur-md">
+        <div class="bg-white dark:bg-slate-900 w-full max-w-xl rounded-[3rem] p-10 shadow-2xl relative">
+            <button onclick="closeEditModal()" class="absolute top-6 right-6 text-gray-400 text-3xl">&times;</button>
+            <h3 class="text-3xl font-black dark:text-white mb-8">Edit Product</h3>
+            <div class="space-y-4">
+                <input type="hidden" id="edit-id">
+                <input type="text" id="edit-name" class="w-full p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none border-2 border-transparent focus:border-blue-500">
+                <div class="grid grid-cols-2 gap-4">
+                    <input type="number" id="edit-price" class="p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none focus:border-blue-500">
+                    <input type="text" id="edit-cat" class="p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none focus:border-blue-500">
+                </div>
+                <input type="text" id="edit-img" class="w-full p-5 bg-gray-50 dark:bg-slate-800 dark:text-white rounded-2xl outline-none focus:border-blue-500">
+                <button onclick="updateProductData()" class="w-full bg-blue-600 text-white p-5 rounded-2xl font-black shadow-xl">Update Dish</button>
+            </div>
+        </div>
+    </div>
 
     <script type="module" src="js/admin.js"></script>
 </body>
